# ChangeLog for media-libs/freetype
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.51 2004/07/20 00:31:05 foser Exp $

*freetype-2.1.9 (20 Jul 2004)

  20 Jul 2004; foser <foser@gentoo.org> freetype-2.1.9.ebuild :
  New release
  Add -fno-strict-aliasing (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=118021)
  Disabled cjk patch, it doesn't apply anymore

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  freetype-1.3.1-r3.ebuild, freetype-1.3.1-r4.ebuild,
  freetype-2.1.3-r2.ebuild, freetype-2.1.4-r1.ebuild, freetype-2.1.4.ebuild,
  freetype-2.1.5-r1.ebuild, freetype-2.1.5.ebuild, freetype-2.1.7.ebuild:
  virtual/glibc -> virtual/libc

  20 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> freetype-1.3.1-r4.ebuild:
  Removed ~s390 keyword due to broken dep to tetex

*freetype-1.3.1-r4 (19 Jun 2004)

  19 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> freetype-1.3.1-r4.ebuild:
  Added tetex IUSE flag. This closes bug #23167 and and #53396

  11 May 2004; Michael McCabe <randy@gentoo.org> freetype-1.3.1-r3.ebuild,
  freetype-2.1.5-r1.ebuild:
  Added s390 fixes and keywords

  03 Apr 2004; Donnie Berkholz <spyderous@gentoo.org>;
  freetype-1.3.1-r3.ebuild:
  Change XFree86 references to X11.

  09 Mar 2004; <agriffis@gentoo.org> freetype-2.1.5-r1.ebuild:
  stable on alpha and ia64

  26 Feb 2004; Guy Martin <gmsoft@gentoo.org> freetype-2.1.5-r1.ebuild:
  Marked stable on hppa.

*freetype-2.1.7 (24 Feb 2004)

  24 Feb 2004; foser <foser@gentoo.org> freetype-2.1.7.ebuild :
  New release, readded docs, updated cjk patch
  This release is in p.mask and needs extensive testing
  header changes break a lot of (older) source builds

  23 Feb 2004; Sven Blumenstein <bazik@gentoo.org> freetype-2.1.5-r1.ebuild:
  Stable on sparc. At least for me :P

  21 Feb 2004; Guy Martin <gmsoft@gentoo.org> :
  Marked stable on hppa.

*freetype-2.1.5-r1 (15 Feb 2004)
