@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/Attic/freetype-2.1.5-r1.ebuild,v 1.12 2004/07/01 07:55:56 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/Attic/freetype-2.1.5-r1.ebuild,v 1.13 2004/07/23 10:44:22 usata Exp $
 
 inherit eutils flag-o-matic
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/freetype/${P/_/}.tar.bz2"
 
 LICENSE="FTL | GPL-2"
 SLOT="2"
-KEYWORDS="x86 ppc sparc mips alpha arm hppa amd64 ia64 ppc64 s390"
+KEYWORDS="x86 ppc sparc mips alpha arm hppa amd64 ia64 ppc64 s390 macos"
 IUSE="zlib bindist cjk doc"
 
 DEPEND="virtual/libc
